# JoTang_Compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.ipynb
IR/Analysis/: AliasAnalysis.cpp  Dominant.cpp  IDF.cpp
IR/Opt/: ConstantFold.cpp  ConstantProp.cpp  DCE.cpp  DealOps.cpp  GVN.cpp  Mem2reg.cpp  MemoryToRegister.cpp  Tail_Elimination.cpp
Log/: log.cpp  log.hpp
functional2025/functional/: 00_main.s  01_var_defn2.s  01_var_defn2.sy.ll  02_var_defn3.s  02_var_defn3.sy.ll  03_arr_defn2.s  03_arr_defn2.sy.ll  04_arr_defn3.s  04_arr_defn3.sy.ll  05_arr_defn4.s  05_arr_defn4.sy.ll  06_const_var_defn2.s  06_const_var_defn2.sy.ll  07_const_var_defn3.s  08_const_array_defn.s  08_const_array_defn.sy.ll  09_func_defn.s  09_func_defn.sy.ll  10_var_defn_func.s  10_var_defn_func.sy.ll  11_add2.s  11_add2.sy.ll  12_addc.s  12_addc.sy.ll  13_sub2.s  13_sub2.sy.ll  14_subc.s  14_subc.sy.ll  15_mul.s  15_mul.sy.ll  16_mulc.s  16_mulc.sy.ll  17_div.s  17_div.sy.ll  18_divc.s  18_divc.sy.ll  19_mod.s  19_mod.sy.ll  20_rem.s  20_rem.sy.ll  (+122 more)
functional2025/h_functional/: 00_comment2.s  00_comment2.sy.ll  01_multiple_returns.s  01_multiple_returns.sy.ll  02_ret_in_block.s  02_ret_in_block.sy.ll  03_branch.sy.ll  04_break_continue.sy.ll  05_param_name.s  05_param_name.sy.ll  06_func_name.s  06_func_name.sy.ll  07_arr_init_nd.s  07_arr_init_nd.sy.ll  09_BFS.sy.ll  (+39 more)
lib/: AstNode.cpp  CFG.cpp  CoreClass.cpp  Type.cpp
test/: example  mytest.sh  test.c  test.c.ll
yacc/: lex.l  parser.y  parser_output.cpp  parser_output.hpp  scanner_output.cpp  scanner_output.hpp
(+20 files in other folders)
